java文件生成和sqlmap文件生成

--- a/src/main/resources/template/velocity/EntityBean.vm
+++ b/src/main/resources/template/velocity/EntityBean.vm
@@ -7,7 +7,7 @@ package ${pkgName};
  * autogenerate
  * @author paddingdun
  * ${table.tableCommon}
- * @${date}
+ * @date ${date}
  */
 public class ${table.entityBeanName} {
 	
