修正获取properties文件的值

--- a/src/main/resources/template/velocity/EntityBean.vm
+++ b/src/main/resources/template/velocity/EntityBean.vm
@@ -1,10 +1,10 @@
 /**
  * 
  */
-package ${pkgName};
+package ${pojoFullPackageName};
 
 /**
- * autogenerate
+ * autogen
  * @author paddingdun
  * ${table.tableCommon}
  * @date ${date}
