--- a/src/main/resources/template/velocity/fun.vm
+++ b/src/main/resources/template/velocity/fun.vm
@@ -5,7 +5,12 @@
 
 #macro( pks_web_argument $cols $sqlMapMarkUse )
 #set( $j = 0 )
-#foreach( $column in ${cols}) #if (${column.primary}) #if ($j != 0), #end org.springframework.web.bind.annotation.RequestParam(value="${column.propertyName}")${column.javaType} #if(${sqlMapMarkUse}==1) ${column.propertyName} #else ${column.columnName} #end #set($j = $j + 1) #end #end
+#foreach( $column in ${cols}) #if (${column.primary}) #if ($j != 0), #end @org.springframework.web.bind.annotation.RequestParam(value="${column.propertyName}")${column.javaType} #if(${sqlMapMarkUse}==1) ${column.propertyName} #else ${column.columnName} #end #set($j = $j + 1) #end #end
+#end
+
+#macro( pks_call_argument $cols $sqlMapMarkUse )
+#set( $j = 0 )
+#foreach( $column in ${cols}) #if (${column.primary}) #if ($j != 0), #end #if(${sqlMapMarkUse}==1) ${column.propertyName} #else ${column.columnName} #end #set($j = $j + 1) #end #end
 #end
 
 #macro( pks_params $cols $sqlMapMarkUse )
