--- a/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
@@ -11,10 +11,46 @@
     <meta name="author" content="">
 
     <link href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-
+    <style>
+    .show-grid{margin-bottom:15px}
+    .show-grid [class^=col-]{padding-top:10px;padding-bottom:10px;background-color:#eee;background-color:rgba(86,61,124,.15);border:1px solid #ddd;border:1px solid rgba(86,61,124,.2)}
+    </style>
   </head>
   <body>
 <div class="container-fluid">
+#**
+<div class="row show-grid">
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+</div>
+
+<div class="row show-grid">
+<div class="col-xs-1 col-sm-1">.col-xs-1 .col-sm-1</div>
+<div class="col-xs-1 col-sm-1 col-sm-offset-1">.col-xs-2 .col-sm-2</div>
+
+</div>
+<div class="row show-grid">
+<div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3<br> i don't say a hello world! you are not a young boy! i am a young boy!</div>
+<div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+
+<!-- Add the extra clearfix for only the required viewport -->
+<div class="clearfix visible-lg-block"></div>
+
+<div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+<div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+</div>
+*#
+<a id="modal-680309" href="#${webActionEditMethodName}Modal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
   <div class="row">
     <div class="col-sm-12 col-md-12 main">
         <table id="table_id" class="table table-striped table-bordered" width="100%" cellspacing="0">
@@ -24,42 +60,40 @@
 				 </tr>
 			</thead>
 		 <tbody>
+		 <tr>
+		 <td><input type='checkbox' class='list_checkbox' value='1'></td>
+		 <td><a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+		 <a><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></td></a>
+		 </tr>
 		 </tbody>
 		</table>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog">
+<div class="modal fade" id="${webActionEditMethodName}Modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">编辑</h4>
+        <h4 class="modal-title">编辑</h4>
       </div>
       <div class="modal-body">
         <div class="container-fluid">
 		    <div class="row">
 				<div class="col-md-12">
 					<form class="form-horizontal" role="form">
+					#foreach( $column in $table.columns)
 						<div class="form-group">
-							<label for="inputEmail3" class="col-sm-2 control-label">
-								Email
+							<label for="${column.propertyName}" class="col-sm-2 control-label">
+							${column.columnCommon}
 							</label>
 							<div class="col-sm-10">
-								<input type="email" class="form-control" id="inputEmail3">
+								<input type="text" class="form-control" id="${column.propertyName}">
 							</div>
 						</div>
-						<div class="form-group">
-							 
-							<label for="inputPassword3" class="col-sm-2 control-label">
-								Password
-							</label>
-							<div class="col-sm-10">
-								<input type="password" class="form-control" id="inputPassword3">
-							</div>
-						</div>
-						<div class="form-group">
+					#end
+						#**<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
 								<div class="checkbox">
 									 
@@ -76,7 +110,7 @@
 									Sign in
 								</button>
 							</div>
-						</div>
+						</div>**#
 					</form>
 				</div>
 			</div>
@@ -84,12 +118,13 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary saveEdit">保存</button>
+        <button type="button" class="btn btn-primary save${webActionEditMethodName}">保存</button>
       </div>
     </div>
   </div>
 </div>
 <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
@@ -126,7 +161,7 @@ $(document).ready(function(){
 						 return row["lastRunStatus"] == undefined ? '':(row["lastRunStatus"]==1?'成功':'失败');}} 
         		 ,{"data":null, "defaultContent":""}]
         ,"ajax":{
-			"url":"${_ctx}/ditask/list",
+			"url":"${_ctx}${webActionRequestMapping}${queryPagingMethodPrefix}",
 			"dataType": "json",
 			"type":"post",
 			"dataSrc":function(json){
@@ -145,7 +180,7 @@ $(document).ready(function(){
 		}
 	});**/
 	
-	$(".saveEdit").on("click", function(){
+	$(".save${webActionEditMethodName}").on("click", function(){
 		$.blockUI({"baseZ":2001,
 			"message":"<h2>保存中...</h2>",
 			"css":{border:		'',
@@ -153,7 +188,7 @@ $(document).ready(function(){
 		var diTaskId = $("#diTaskId").val();
 		var diTrigger = $("#diTrigger").val();
 		var remoteUrl = $("#remoteUrl").val();
-		$.ajax("ditask/edit", {data:{"diTaskId":diTaskId, "diTrigger":diTrigger, "remoteUrl":remoteUrl}, type:"post",
+		$.ajax("${webActionRequestMapping}${webActionEditMethodName}", {data:{"diTaskId":diTaskId, "diTrigger":diTrigger, "remoteUrl":remoteUrl}, type:"post",
     		dataType:"json", success:function(d){
     			alert(d.msg);
     			if(d.status == 0){
