--- a/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
@@ -56,7 +56,11 @@
         <table id="table_id" class="table table-striped table-bordered" width="100%" cellspacing="0">
 		 <thead>
 				 <tr>
-				 #foreach( $column in $table.columns)<th>${column.columnCommon}</th>#end
+				 #foreach( $column in $table.jspColumns)
+					#if( ${column.listRender.show} )
+						<th>${column.columnCommon}</th>
+					#end
+				#end
 				 </tr>
 			</thead>
 		 <tbody>
@@ -83,20 +87,14 @@
 		    <div class="row">
 				<div class="col-md-12">
 					<form class="form-horizontal" role="form">
-					#foreach( $column in $table.columns)
-						<div class="form-group">
-							<label for="${column.propertyName}" class="col-sm-2 control-label">
-							${column.columnCommon}
-							</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="${column.propertyName}">
-							</div>
-						</div>
+					#foreach( $column in $table.jspColumns)
+						#if( ${column.editRender.show} )
+							${column.editRender.render}
+						#end
 					#end
 						#**<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
 								<div class="checkbox">
-									 
 									<label>
 										<input type="checkbox"> Remember me
 									</label>
@@ -154,12 +152,13 @@ $(document).ready(function(){
 					 }
 				 	}
 					 ],
-        columns:[{"data":"diTaskModel", "defaultContent":""}  , {"data":"diTaskName", "defaultContent":""}  , {"data":"diTaskDes", "defaultContent":""}  , {"data":"diTrigger", "defaultContent":""}  ,
-                 {"data":null, "defaultContent":"", "render":function render( data, type, row, meta ){
-					 return row["diTaskStatus"] == 1 ? '运行':'停止';}}  , {"data":"remoteUrl", "defaultContent":""}  , {"data":"createTimeStr", "defaultContent":""}  , {"data":"lastUpdateTimeStr", "defaultContent":""}  , {"data":"diTaskImplClass", "defaultContent":""}  , {"data":"lastRunDatetimeStr", "defaultContent":""} 
-					 , {"data":null, "defaultContent":"", "render":function render( data, type, row, meta ){
-						 return row["lastRunStatus"] == undefined ? '':(row["lastRunStatus"]==1?'成功':'失败');}} 
-        		 ,{"data":null, "defaultContent":""}]
+        columns:[
+        #foreach( $column in $table.jspColumns)
+			#if( ${column.listRender.show} )
+				${column.listRender.render}
+			#end
+		#end
+        ]
         ,"ajax":{
 			"url":"${_ctx}${webActionRequestMapping}${queryPagingMethodPrefix}",
 			"dataType": "json",
