--- a/src/main/resources/template/velocity/jspComponent.vm
+++ b/src/main/resources/template/velocity/jspComponent.vm
@@ -1,22 +1,10 @@
-#macro( edit_input $column )
-<div class="form-group">
-	<label for="${column.propertyName}" class="col-sm-2 control-label">
-	${column.columnCommon}
-	</label>
-	<div class="col-sm-10">
-		<input type="text" class="form-control" id="${column.propertyName}">
-	</div>
-</div>
-#end
-
-#macro( edit_hidden $column )
-<input type="hidden" id="${column.propertyName}" name="${column.propertyName}">
-<div class="form-group">
-	<label for="${column.propertyName}" class="col-sm-2 control-label">
-	${column.columnCommon}
-	</label>
-	<div class="col-sm-10">
-		<input type="text" class="form-control" id="${column.propertyName}">
-	</div>
-</div>
+#macro( datatable_columns $jspColumns )
+#set($j = 0)
+	#foreach( $column in $jspColumns)
+		#if($j > 0),#end
+		#if( ${column.listRender.show} )
+			${column.listRender.render}
+			#set($j = $j + 1)
+		#end
+	#end
 #end
