--- a/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
@@ -1,4 +1,6 @@
 #parse("template/velocity/jspComponent.vm")
+<%@ page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>
+<% session.setAttribute("_ctx", request.getContextPath()); %>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,6 +14,7 @@
     <meta name="author" content="">
 
     <link href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://jspdd.applinzi.com/js/datatable/1.1/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
     <style>
     .show-grid{margin-bottom:15px}
     .show-grid [class^=col-]{padding-top:10px;padding-bottom:10px;background-color:#eee;background-color:rgba(86,61,124,.15);border:1px solid #ddd;border:1px solid rgba(86,61,124,.2)}
@@ -54,7 +57,7 @@
 <a id="modal-680309" href="#${webActionEditMethodName}Modal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
   <div class="row">
     <div class="col-sm-12 col-md-12 main">
-        <table id="table_id" class="table table-striped table-bordered" width="100%" cellspacing="0">
+        <table id="${jspDatatableId}" class="table table-striped table-bordered" width="100%" cellspacing="0">
 		 <thead>
 				 <tr>
 				 #foreach( $column in $table.jspColumns)
@@ -65,11 +68,6 @@
 				 </tr>
 			</thead>
 		 <tbody>
-		 <tr>
-		 <td><input type='checkbox' class='list_checkbox' value='1'></td>
-		 <td><a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-		 <a><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></td></a>
-		 </tr>
 		 </tbody>
 		</table>
     </div>
@@ -122,42 +120,37 @@
     </div>
   </div>
 </div>
+<!--script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="${_ctx}/js/datatable/js/jquery.dataTables.min.js"></script>
+<script src="${_ctx}/js/datatable/js/dataTables.bootstrap.js"></script>
+<script src="${_ctx}/js/util.js"></script>
+<script src="${_ctx}/js/tables.js"></script-->
+
 <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="http://jspdd.applinzi.com/js/datatable/1.1/js/jquery.dataTables.min.js"></script>
+<script src="http://jspdd.applinzi.com/js/datatable/1.1/js/dataTables.bootstrap.min.js"></script>
+<script src="http://jspdd.applinzi.com/js/util.js"></script>
+<script src="http://jspdd.applinzi.com/js/tables.js"></script>
+
 <script type="text/javascript">
 $(document).ready(function(){
-	/**var table = Tables.initTable($("#table_id"), {
+	/**
+	 * datatables表格数据;
+	 */
+	var table = Tables.initTable($("#${jspDatatableId}"), {
 		"processing":true,
 		"serverSide": true,
 		"createdRow": function ( row, data, index ) {
         },
-        columnDefs:[
-					{'targets':0,
-						 'width':'20',
-						 "orderable": false,
-						 "searchable": false,
-				         'className': " "
-						 "render":function render( data, type, row, meta ){
-							 return '<input type="checkbox" value="' + data[""]+ '">';
-						 }
-					},
-					{
-			         'targets': [-1], 
-			         'width':'80',
-			      	  "render":function render( data, type, row, meta ){
-						 return '<button type="button" class="btn btn-primary" onclick="edit(' + row["diTaskId"]+')">编辑</button>'+
-						 '<button type="button" class="btn btn-primary" style="margin-top:5px;" onclick="change(' + row["diTaskId"]+', '+ row["diTaskStatus"] +')">'+(row["diTaskStatus"] == 1 ? "停止":"启动") +'</button>'+
-						 '<button type="button" class="btn btn-primary" style="margin-top:5px;" onclick="hurry(' + row["diTaskId"]+', this)">手动执行</button>' +
-						 '<button type="button" class="btn btn-primary showLog" style="margin-top:5px;" >显示日志</button>';
-					 }
-				 	}
-					 ],
         columns:[
         #datatable_columns($table.jspColumns)
         ]
         ,"ajax":{
-			"url":"${_ctx}${webActionRequestMapping}${queryPagingMethodPrefix}",
+			"url":"${_ctx}${webActionRequestMapping}/${queryPagingMethodPrefix}",
 			"dataType": "json",
 			"type":"post",
 			"dataSrc":function(json){
@@ -168,13 +161,20 @@ $(document).ready(function(){
 				return data;
 			},
 			"data":function(d){
-				plainfy_datatables(d);
+				me.pdd.Util.plainfy_datatables(d);
 			},
 			"complete":function(d){
 			}
 			
 		}
-	});**/
+	});
+	
+	$("#${jspDatatableId}").on("click", ".${headGroupCheckboxClassName}", function(){
+		var f = this.checked; 
+		$(".${groupCheckboxClassName}").each(function(){
+			this.checked = f;
+		});
+	});
 	
 	$(".save${webActionEditMethodName}").on("click", function(){
 		$.blockUI({"baseZ":2001,
@@ -184,7 +184,7 @@ $(document).ready(function(){
 		var diTaskId = $("#diTaskId").val();
 		var diTrigger = $("#diTrigger").val();
 		var remoteUrl = $("#remoteUrl").val();
-		$.ajax("${webActionRequestMapping}${webActionEditMethodName}", {data:{"diTaskId":diTaskId, "diTrigger":diTrigger, "remoteUrl":remoteUrl}, type:"post",
+		$.ajax("${_ctx}${webActionRequestMapping}/${webActionEditMethodName}", {data:{"diTaskId":diTaskId, "diTrigger":diTrigger, "remoteUrl":remoteUrl}, type:"post",
     		dataType:"json", success:function(d){
     			alert(d.msg);
     			if(d.status == 0){
@@ -233,4 +233,10 @@ columns:[#foreach( $column in $table.columns) #if ($velocityCount != 1), #end
 #foreach( $column in $table.columns)
 #if(${foreach.count} != 1),#end new ReportColumn("${column.propertyName}","",new ReportType[0],ReportColumn.RANGE_TYPE)
 #end
+
+<tr>
+<td><input type='checkbox' class='list_checkbox' value='1'></td>
+<td><a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+<a><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></td></a>
+</tr>
 -->
