--- a/src/main/resources/template/velocity/jspComponent.vm
+++ b/src/main/resources/template/velocity/jspComponent.vm
@@ -8,3 +8,9 @@
 		#end
 	#end
 #end
+
+#macro( ajax_pks_get_data $cols $sqlMapMarkUse )
+var objData = {};
+#foreach( $column in ${cols}) #if (${column.primary}) #if(${sqlMapMarkUse}==1) objData["${column.propertyName}"]=rowData["${column.propertyName}"]; #else objData["${column.columnName}"]=rowData["${column.columnName}"]; #end #end 
+#end
+#end
