--- a/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
@@ -13,8 +13,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link href="${_ctx}/js/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="${_ctx}/js/datatable/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    
+    #*
     <link href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://jspdd.applinzi.com/js/datatable/1.1/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
+    <link href="http://jspdd.applinzi.com/js/datatable/1.1/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    *#
     <style>
     .show-grid{margin-bottom:15px}
     .show-grid [class^=col-]{padding-top:10px;padding-bottom:10px;background-color:#eee;background-color:rgba(86,61,124,.15);border:1px solid #ddd;border:1px solid rgba(86,61,124,.2)}
@@ -54,7 +59,34 @@
 <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
 </div>
 *#
-<a id="modal-680309" href="#${webActionEditMethodName}Modal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
+#if( ${table.queryFormRender.show} )
+<div class="row">
+	<div class="col-sm-12 col-md-12">
+		<div class="panel panel-default">
+		<div class="panel-heading">查询</div>
+		<div class="panel-body">
+	    	<div class="container-fluid">
+			    <div class="row">
+					<div class="col-md-12">
+						<form class="form-horizontal" role="form">
+						${table.queryFormRender.render}
+						</form>
+					</div>
+				</div>
+	      	</div>
+		</div>
+		<div class="panel-heading">
+	    	<div class="row">
+	    		<div class="col-lg-offset-10 col-lg-2">
+	    			<a class="btn btn-primary" href="#" role="button">查询</a>
+	    			<a class="btn btn-default" href="#" role="button">重置</a>
+	    		</div>
+	    	</div>
+		</div>
+		</div>
+	</div>
+</div>
+#end
   <div class="row">
     <div class="col-sm-12 col-md-12 main">
         <table id="${jspDatatableId}" class="table table-striped table-bordered" width="100%" cellspacing="0">
@@ -120,14 +152,15 @@
     </div>
   </div>
 </div>
-<!--script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
-<script src="//cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
-<script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="${_ctx}/js/jquery-2.1.4/jquery-2.1.4.min.js"></script>
+<script src="${_ctx}/js/jquery/jquery.blockUI.js"></script>
+<script src="${_ctx}/js/bootstrap/js/bootstrap.min.js"></script>
 <script src="${_ctx}/js/datatable/js/jquery.dataTables.min.js"></script>
 <script src="${_ctx}/js/datatable/js/dataTables.bootstrap.js"></script>
-<script src="${_ctx}/js/util.js"></script>
-<script src="${_ctx}/js/tables.js"></script-->
+<script src="${_ctx}/js/util2.js"></script>
+<script src="${_ctx}/js/tables.js"></script>
 
+#*
 <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -135,7 +168,7 @@
 <script src="http://jspdd.applinzi.com/js/datatable/1.1/js/dataTables.bootstrap.min.js"></script>
 <script src="http://jspdd.applinzi.com/js/util.js"></script>
 <script src="http://jspdd.applinzi.com/js/tables.js"></script>
-
+*#
 <script type="text/javascript">
 $(document).ready(function(){
 	/**
@@ -187,7 +220,8 @@ $(document).ready(function(){
 		var row = $(this).closest("tr");
 		var rowData = table.row(row).data();
 		#ajax_pks_get_data(${table.columns} ${sqlMapMarkUse})
-		$.ajax("${_ctx}${webActionRequestMapping}/${getMethodPrefix}", {"data":objData, type:"get",
+		$.ajax("${_ctx}${webActionRequestMapping}/${getMethodPrefix}", 
+			{"data":objData, type:"get",
 			dataType:"json", success:function(d){
 				if(d.status == 0){
 					var o = d.data;
@@ -198,15 +232,33 @@ $(document).ready(function(){
 				}else{
 					alert(d.msg);
 				}
-			}});
+			}, complete:function(){}});
 	});
 	
 	/**
 	 * 删除;
 	 */
 	$("#${jspDatatableId}").on("click", ".glyphicon-remove-circle", function(){
-		var id = $(this).closest("tr").find(".${groupCheckboxClassName}").val();
-		console.info(id);
+		if(confirm("确定要删除吗?")){
+			var row = $(this).closest("tr");
+			var rowData = table.row(row).data();
+			#ajax_pks_get_data(${table.columns} ${sqlMapMarkUse})
+			$.blockUI({"baseZ":2001,
+				"message":"<h2>删除中...</h2>",
+				"css":{border:		'',
+					backgroundColor:''}});
+			$.ajax("${_ctx}${webActionRequestMapping}/${deleteMethodPrefix}", 
+				{"data":objData, type:"get",
+					dataType:"json", success:function(d){
+						alert(d.msg);
+						if(d.status == 0){
+							table.ajax.reload();
+						}
+					}, complete:function(){   
+						$.unblockUI();
+					} 
+				});
+		}
 	});
 	
 	$(".save${webActionEditMethodName}").on("click", function(){
