--- a/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/BootstrapDataTableJsp.vm
@@ -14,10 +14,12 @@
     <meta name="author" content="">
 
     <link href="${_ctx}/js/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="${_ctx}/js/bootstrapvalidator/css/bootstrapValidator.css" rel="stylesheet">
     <link href="${_ctx}/js/datatable/css/dataTables.bootstrap.min.css" rel="stylesheet">
     
     #*
     <link href="//cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://jspdd.applinzi.com/js/bootstrapvalidator/0.5.2/css/bootstrapValidator.css" rel="stylesheet">
     <link href="http://jspdd.applinzi.com/js/datatable/1.1/css/dataTables.bootstrap.min.css" rel="stylesheet">
     *#
     <style>
@@ -89,7 +91,17 @@
 #end
   <div class="row">
     <div class="col-sm-12 col-md-12 main">
-        <table id="${jspDatatableId}" class="table table-striped table-bordered" width="100%" cellspacing="0">
+    <div class="panel panel-default">
+	  <!-- Default panel contents -->
+	  <div class="panel-heading">
+	  	   <div class="row">
+	    		<div class="col-lg-2">
+	    			<a class="btn btn-primary" href="#" role="button">新增</a>
+	    			<a class="btn btn-primary" href="#" role="button">删除</a>
+	    		</div>
+	    	</div>
+	  </div>
+        <table id="${jspDatatableId}" class="table table-striped table-bordered" style="margin-top:0px !important" width="100%" cellspacing="0">
 		 <thead>
 				 <tr>
 				 #foreach( $column in $table.jspColumns)
@@ -102,6 +114,7 @@
 		 <tbody>
 		 </tbody>
 		</table>
+	 </div>
     </div>
   </div>
 </div>
@@ -117,7 +130,7 @@
         <div class="container-fluid">
 		    <div class="row">
 				<div class="col-md-12">
-					<form class="form-horizontal" role="form">
+					<form class="form-horizontal" role="form" action="${_ctx}${webActionRequestMapping}/${webActionEditMethodName}" method="post">
 					#foreach( $column in $table.jspColumns)
 						#if( ${column.editRender.show} )
 							${column.editRender.render}
@@ -153,8 +166,10 @@
   </div>
 </div>
 <script src="${_ctx}/js/jquery-2.1.4/jquery-2.1.4.min.js"></script>
+<script src="${_ctx}/js/jquery/jquery.form.js"></script>
 <script src="${_ctx}/js/jquery/jquery.blockUI.js"></script>
 <script src="${_ctx}/js/bootstrap/js/bootstrap.min.js"></script>
+<script src="${_ctx}/js/bootstrapvalidator/js/bootstrapValidator.min.js"></script>
 <script src="${_ctx}/js/datatable/js/jquery.dataTables.min.js"></script>
 <script src="${_ctx}/js/datatable/js/dataTables.bootstrap.js"></script>
 <script src="${_ctx}/js/util2.js"></script>
@@ -162,8 +177,10 @@
 
 #*
 <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://jspdd.applinzi.com/js/jquery/jquery.form.js"></script>
 <script src="//cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="http://jspdd.applinzi.com/js/bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
 <script src="http://jspdd.applinzi.com/js/datatable/1.1/js/jquery.dataTables.min.js"></script>
 <script src="http://jspdd.applinzi.com/js/datatable/1.1/js/dataTables.bootstrap.min.js"></script>
 <script src="http://jspdd.applinzi.com/js/util.js"></script>
@@ -225,8 +242,8 @@ $(document).ready(function(){
 			dataType:"json", success:function(d){
 				if(d.status == 0){
 					var o = d.data;
-					me.pdd.Form.setForm($(".form-horizontal"), o);
-					$('#editModal').modal({
+					me.pdd.Form.setForm($("#${webActionEditMethodName}Modal .form-horizontal"), o);
+					$('#${webActionEditMethodName}Modal').modal({
 			   		  keyboard: false
 			   		});
 				}else{
@@ -261,67 +278,38 @@ $(document).ready(function(){
 		}
 	});
 	
+	/**
+	 * 编辑保存;
+	 */
 	$(".save${webActionEditMethodName}").on("click", function(){
 		$.blockUI({"baseZ":2001,
 			"message":"<h2>保存中...</h2>",
 			"css":{border:		'',
 				backgroundColor:''}});
-		var diTaskId = $("#diTaskId").val();
-		var diTrigger = $("#diTrigger").val();
-		var remoteUrl = $("#remoteUrl").val();
-		$.ajax("${_ctx}${webActionRequestMapping}/${webActionEditMethodName}", {data:{"diTaskId":diTaskId, "diTrigger":diTrigger, "remoteUrl":remoteUrl}, type:"post",
-    		dataType:"json", success:function(d){
-    			alert(d.msg);
-    			if(d.status == 0){
-    				$('#editModal').modal('hide');
-    				$("#table_id").DataTable().draw();
-    			}
-    		},error:function(e){
-    			
-    		},complete:function(e){
-    			/**$("#diTaskId").val("");
-				$("#diTrigger").val("");
-				$("#remoteUrl").val("");**/
-    			$.unblockUI();
-    		}});
+		
+		$("#${webActionEditMethodName}Modal .form-horizontal").ajaxSubmit(
+			{	success:function(d){
+					alert(d.msg);
+					if(d.status == 0){
+						table.ajax.reload();
+					}
+				},
+				error:function(e){
+				},
+				complete:function(e){
+					$('#${webActionEditMethodName}Modal').modal("hide");
+					$.unblockUI();
+				}
+		});
 	});
 });
-
-function edit(id){
-	$.ajax("ditask/get", {data:{"id":id}, type:"get",
-		dataType:"json", success:function(d){
-			if(d.status == 0){
-				var o = d.data;
-				$("#diTaskId").val(o.diTaskId);
-				$("#diTrigger").val(o.diTrigger);
-				$("#remoteUrl").val(o.remoteUrl);
-				$("#des1").html(o.diTaskDes);
-				$('#editModal').modal({
-		   		  keyboard: false
-		   		});
-			}else{
-				alert(d.msg);
-			}
-		}});
-}
 </script>
 </body>
 </html>
 
 
-<!--columns:[#foreach( $column in $table.columns) #if ($velocityCount != 1), #end 
-{"data":"${column.propertyName}", "defaultContent":""} #end]
-
-columns:[#foreach( $column in $table.columns) #if ($velocityCount != 1), #end 
-{"data":"${column.columnName}", "defaultContent":""} #end]
-		
+<!--	
 #foreach( $column in $table.columns)
 #if(${foreach.count} != 1),#end new ReportColumn("${column.propertyName}","",new ReportType[0],ReportColumn.RANGE_TYPE)
 #end
-
-<tr>
-<td><input type='checkbox' class='list_checkbox' value='1'></td>
-<td><a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-<a><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></td></a>
-</tr>
 -->
